#89: Added default value to @InjectProperty annotation. Recreated default event publisher to use platform threads instead of virtual ones. Thread pool size is configurable. Added some more Javadoc.